--- a/frontend/src/pages/styles/market-manager.css
+++ b/frontend/src/pages/styles/market-manager.css
@@ -1,4 +1,4 @@
-form {
+.add-market-form form {
     width: 75%;
     margin: auto;
     background: rgb(240, 240, 240);
@@ -8,7 +8,7 @@ form {
     padding: 20px 25px;
 }
 
-legend {
+.add-market-form legend {
     margin-bottom: 15px;
 }
 
@@ -35,13 +35,13 @@ legend {
     width: max-content;
 }
 
-select, input[type="text"] {
+.add-market-form select, input[type="text"] {
     padding: 10px 15px;
     margin: 0;
     margin-top: 10px;
 }
 
-button {
+.add-market-form button {
     width: fit-content;
     align-self: center;
 }
